--- a/native-script/app/components/main/main.component.html
+++ b/native-script/app/components/main/main.component.html
@@ -6,4 +6,6 @@
             </GridLayout>
         </ng-template>
     </ListView>
+
+    <FAB (tap)="fabTap()" icon="res://ic_add_white" rippleColor="#f1f1f1" class="fab-button"></FAB>
 </GridLayout>
